--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
     ],
     "autoload": {
         "classmap": [
-            "src/console",
+            "src",
+            "src/Console",
+            "src/Console/Commands",
             "src/helpers"
         ],
         "psr-0": {
