--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "require": {
         "illuminate/console": "*" ,
         "illuminate/filesystem" : "*",
-        "pimple/pimple": "~3.0"
+        "pimple/pimple": "~3.0",
+        "nesbot/carbon": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
